--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,7 @@ jobs:
           printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_deploy
           chmod 600 ~/.ssh/id_deploy
 
-      - name: Wait for server and install Docker
+      - name: Wait for server and Docker ready
         env:
           SERVER_IP: ${{ needs.provision.outputs.server_ip }}
         run: |
@@ -129,24 +129,19 @@ jobs:
             sleep 10
           done
 
-          $SSH_CMD "bash -s" <<'REMOTE'
-          set -euo pipefail
-          export DEBIAN_FRONTEND=noninteractive
+          # Cloud-init can still be running after SSH becomes available.
+          $SSH_CMD "cloud-init status --wait || true"
 
-          if ! command -v docker >/dev/null 2>&1; then
-            apt-get update
-            apt-get install -y ca-certificates curl gnupg lsb-release
-            install -m 0755 -d /etc/apt/keyrings
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-            chmod a+r /etc/apt/keyrings/docker.gpg
-            . /etc/os-release
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu ${VERSION_CODENAME} stable" > /etc/apt/sources.list.d/docker.list
-            apt-get update
-            apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-          fi
+          for i in $(seq 1 24); do
+            if $SSH_CMD "command -v docker >/dev/null 2>&1 && docker compose version >/dev/null 2>&1"; then
+              $SSH_CMD "mkdir -p ${APP_DIR}"
+              exit 0
+            fi
+            sleep 5
+          done
 
-          mkdir -p /opt/simple-app
-          REMOTE
+          echo "Docker is not ready on server"
+          exit 1
 
       - name: Upload compose file
         env:
